feat: implementa listagem de orientadores com filtro por area (Issue #50)